# gitlab-artifact-downloader

./: CMakeLists.txt  README.md  vcpkg.json
include/gitlab-downloader/: GitLabService.hpp
include/gitlab-downloader/controllers/: ApiController.hpp
include/gitlab-downloader/models/: Pipeline.hpp
src/: CMakeLists.txt  main.cpp
src/controllers/: ApiController.cpp
src/services/: GitLabService.cpp
